--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ag-images",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.js",
   "browser": "browser.js",
   "keywords": [],
@@ -21,6 +21,7 @@
   },
   "files": [
     "binding.gyp",
+    "deps/",
     "src/",
     "index.d.ts"
   ],
