--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ag-images",
   "description": "Library for loading and saving PNG files",
-  "version": "2.1.1",
+  "version": "2.1.3",
   "main": "index.js",
   "browser": "browser.js",
   "keywords": [],
@@ -27,8 +27,8 @@
   ],
   "types": "index.d.ts",
   "dependencies": {
-    "@types/node": "^14.11.2",
-    "nan": "nodejs/nan",
+    "@types/node": "20.9.4",
+    "nan": "2.18.0",
     "node-pre-gyp": "^0.15.0"
   },
   "devDependencies": {
