Add WebP decoding support and auto-detect decode()
Upgrade vendored Wuffs from v0.4 to unsupported-snapshot which includes
VP8 (lossy) and VP8L (lossless) WebP decoders. Add decodeWebP() with
the same async worker pattern and premultiplied alpha support as
decodePNG(). Add a unified decode() that auto-detects format from magic
bytes. VP8X (extended WebP) is rejected early with a clear error message.

Also fixes pre-existing build issues on Node 24: upgrade nan to 2.25.0,
use system zlib instead of vendored chromium zlib, and disable
PNG_ZLIB_VERNUM check.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ag-images",
   "description": "Library for loading and saving PNG files",
-  "version": "2.3.3",
+  "version": "2.4.0",
   "main": "index.js",
   "browser": "browser.js",
   "keywords": [],
@@ -28,7 +28,7 @@
   "types": "index.d.ts",
   "dependencies": {
     "@types/node": "20.9.4",
-    "nan": "2.23.0",
+    "nan": "^2.25.0",
     "node-pre-gyp": "^0.15.0"
   },
   "devDependencies": {
